--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-md-12 justify-content-center">
-					<p>Masha allah...</p>
+					<p>&copySabith Athavanad</p>
 				</div>
 			</div>
 		</div>
