--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t js-fullheight">
 						<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
-							<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
+							<div class="profile-thumb" style="background: url(images/IMG_20230105_154808_688.jpg);"></div>
 							<h1><span>Abdul Shabith T</span></h1>
 							<h3><span>Software Developer </span></h3>
 							<p>
