--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Sabith &mdash; Abdul Shabith T</title>
+	<title>Abdul Shabith T</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Abdul Shabith T - Software Developer in India and kerala" />
 	<meta name="keywords" content="Software Developer,Web Developer In India,Software Enginer,Front End Developer,Backend Developer,Full Stack Developer,Developer in Freelancer,javascript developer,react.js,node.js,express.js,molecular.js" />
@@ -100,7 +100,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Abdul Shabith T</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+91 956 776 8733</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">sabith.athavanad@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.sabith.live</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">www.sabith.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Thottiyil House, Athavanad, Tirur, Malappuram,Kerala-676301</span></li>
 					</ul>
 				</div>
