--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 						<li><span class="first-block">Full Name:</span><span class="second-block">Abdul Shabith T</span></li>
 						<li><span class="first-block">Phone:</span><span class="second-block">+91 956 776 8733</span></li>
 						<li><span class="first-block">Email:</span><span class="second-block">sabith.athavanad@gmail.com</span></li>
-						<li><span class="first-block">Website:</span><span class="second-block">www.sabith.com</span></li>
+						<li><span class="first-block">Website:</span><span class="second-block">www.sabitht.com</span></li>
 						<li><span class="first-block">Address:</span><span class="second-block">Thottiyil House, Athavanad, Tirur, Malappuram,Kerala-676301</span></li>
 					</ul>
 				</div>
