--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 		</div>
 	</div>
 	
-	<div id="fh5co-started" class="fh5co-bg-dark">
+	<div id="fh5co-started" class="fh5co-bg-dark" style="display:none;">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
