--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
 
 	
 
-	<div id="fh5co-work" class="fh5co-bg-dark">
+	<div id="fh5co-work" class="fh5co-bg-dark" style="display:none;>
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -531,7 +531,7 @@
 		</div>
 	</div>
 	
-	<div id="fh5co-started" class="fh5co-bg-dark" style="display:none;">
+	<div id="fh5co-started" class="fh5co-bg-dark">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row animate-box">
