--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 					</ul>
 				</div>
 				<div class="col-md-7">
-					<h2>Hai!</h2>
-					<p> Experianced Software Developer, Currently working as JavaScript FullStack developer.I
+					<h2>Heey...Nice to meet you..!</h2>
+					<p>I'm an Experianced Software Developer, Currently working as JavaScript FullStack developer.I
 						have worked in different Domains and Programming Language. I am a
 						self-motivated and self-taught professional who likes to solve critical business problems. Experienced with
 						all stages of the development cycle for dynamic web projects.Those who would like to find the solutions for E-Commerce 
@@ -536,7 +536,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Follow Us !</h2>
+					<h2>Follow Me !</h2>
 					<!-- <p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p> -->
 					<ul class="fh5co-social-icons">
 						<li><a href="https://www.linkedin.com/in/abdulshabith/" target="_blank"><i class="icon-linkedin2 text-light"></i></a></li>
